Fix text issues on OSX safari during hover animation http://stackoverflow.com/questions/7947385/hovering-over-css-transition-in-safari-lightens-certain-font-color

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -47,4 +47,8 @@
     transform: scale(0.77);
   }
   
+  .panel {
+    -webkit-transform: translateZ(0);
+  }
+
 }
